--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="content-box">
             <div class="profile-box">
                 <h1>Sign in to X</h1>
-                <div class="button"><i class="bi bi-google"></i>Sign in with Google</div>
-                <div class="button"><i class="bi bi-apple"></i>Sign in with apple</div>
+                <div class="button"><i class="bi bi-google"></i>&nbsp;Sign in with Google</div>
+                <div class="button"><i class="bi bi-apple"></i>&nbsp;Sign in with apple</div>
                 <div class="separator">
                     <hr><span>or</span><hr>
                 </div>
